styles/style.css
:root{
    --darkgray: #282a36;
    --lightgray: #44475a;
    --white: #f8f8f2;
    --blueishgray: #6272a4;
    --purple: #bd93f9;
    --green: #50fa7b;
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
}

body{
    background-color: #282a36;
    display: flex;
    flex-direction: column;
    /* justify-content: center; */
    align-items: center;
}

.title{
    font-size: 40px;
    margin: 30px;
    color: var(--lightgray);

}

.container{
    width: 85vh;
    height: 85vh;
}

.board{
    height: 100%;
    width: 100%;
    background-color: var(--lightgray);
    /* border: solid 2px var(--blueishgray); */
    display: grid;
    grid-template-columns: repeat(25, 1fr);
    grid-template-rows: repeat(25, 1fr);
    
}

.cell{
    background-color: var(--lightgray);
    border: solid 1px var(--darkgray);
    text-align: center;
    font-weight: 400;
    font-size: 25px;
    color: var(--darkgray);
}

.cellsnake{
    background-color: var(--green);
    border: solid 1px var(--darkgray);
    text-align: center;
    font-weight: 400;
    font-size: 25px;
    color: var(--darkgray);
}

